# EMFieldGPR

./: .buildinfo  .env  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  todo.html
.github/workflows/: docs.yml  format.yml  pytest.yml
EMFieldML/: __init__.py  config.py
EMFieldML/ActiveLearning/: ActiveLearning.py  Decide6points.py  __init__.py
EMFieldML/FEKO/: FEKORunner.py  __init__.py
EMFieldML/FEKO/Lua/: coil_stl.lua  make_stl.lua  simulation_field.lua  simulation_optimization.lua  simulation_s2p.lua
EMFieldML/Learning/: Learning.py  YDataMaker.py  __init__.py
EMFieldML/Modeling/: BVH.py  PolyCubeMaker.py  RayIntersect.py  __init__.py  calculate_plane_point_distance.py  default_config.py  make_first_grid.py  make_second_grid.py  shared_geometry.py
EMFieldML/Results/: Graph.py  MagnitudeMapMaker.py  Results.py  TestMaker.py  __init__.py
EMFieldML/Utils/: DataSelect.py  FloatAssert.py  ShieldModeler.py  __init__.py  logger.py
EMFieldML/Visualize/: Deformation.py  Prediction.py  Visualize.py  __init__.py  make_first_grid.py  make_second_grid.py
EMFieldML/cli/: __init__.py  main.py
EMFieldML/cli/commands/: __init__.py  demo.py
EMFieldML/config/: __init__.py  base.py  logger.py  paths.py  settings.py  templates.py
_sources/: index.rst  todo.rst
_sources/api/: active_learning.rst  feko.rst  index.rst  modeling.rst  utils.rst
api/: active_learning.html  cli.html  config.html  feko.html  index.html  learning.html  modeling.html  results.html  utils.html  visualization.html
docs/: conf.py
docs/_static/: custom.css
docs/api/: cli.rst  config.rst  learning.rst  results.rst  visualization.rst
examples/: Figure.ipynb  GenerateTestData.ipynb  OverallFlow.ipynb
tests/: __init__.py  test_Decide6points.py  test_ExteriorGrid.py  test_FekoOutputParsing.py  test_FekoRunner.py  test_Learning.py  test_PolyCube.py  test_ShieldModeler.py  test_YDataMaker.py  test_make_ferrite_stl.py  test_visualize.py  test_x_train_init.py
tests/data/: circle_prediction_point_101.txt  x_train_init.txt
tests/data/active_learning/pattern_list/: pattern0_point_list.txt  pattern10_point_list.txt  pattern11_point_list.txt  pattern12_point_list.txt  pattern13_point_list.txt  pattern14_point_list.txt  pattern15_point_list.txt  pattern16_point_list.txt  pattern17_point_list.txt  pattern18_point_list.txt  pattern19_point_list.txt  pattern1_point_list.txt  pattern20_point_list.txt  pattern21_point_list.txt  pattern22_point_list.txt  pattern23_point_list.txt  pattern24_point_list.txt  pattern25_point_list.txt  pattern26_point_list.txt  pattern2_point_list.txt  pattern3_point_list.txt  pattern4_point_list.txt  pattern5_point_list.txt  pattern6_point_list.txt  pattern7_point_list.txt  pattern8_point_list.txt  pattern9_point_list.txt
tests/data/circle_move_x_data/: ferrite_circle_move_1.txt
tests/data/circle_parameter/: circle_param_1.txt  circle_param_364.txt  circle_param_41.txt  circle_param_move_1.txt  circle_param_move_364.txt  circle_param_move_41.txt
tests/data/circle_prediction_point/: circle_prediction_point_1.txt  circle_prediction_point_364.txt  circle_prediction_point_41.txt
tests/data/circle_stl/: circle_stl_1.stl  circle_stl_364.stl  circle_stl_41.stl
tests/data/circle_x/: circle_x_data_1.txt  circle_x_data_364.txt  circle_x_data_41.txt
tests/data/learning_model/: model_point128_N_744.pth
tests/data/train_init/: x_test_init.txt
tests/data/y_data/: outdata_magnitude_0.csv  outdata_magnitude_1.csv  outdata_magnitude_2.csv
